donw with few routing parts

--- a/src/Component/Assets/css/Navbar.css
+++ b/src/Component/Assets/css/Navbar.css
@@ -234,7 +234,7 @@
       }
     .Navbar{
         
-        position: relative;
+        position: fixed;
         width: 100vw; 
     }
     .NavbarMenu{ 
