--- a/src/Component/Assets/css/Footer.css
+++ b/src/Component/Assets/css/Footer.css
@@ -31,7 +31,7 @@
     font-size: 14px;
 }
 .btmdiv{
-    background-color: rgba(0, 0, 0, 0.814);
+    background-color: #666;
     display: flex;
     padding: 4px 20px;
     flex-wrap: nowrap;
