--- a/src/Component/Assets/css/Carousel.css
+++ b/src/Component/Assets/css/Carousel.css
@@ -9,25 +9,31 @@
 }
 
 .slider-container {
-  height: var(--heights);
+  max-height: var(--heights);
   width: var(--widths);
   position: relative;
-  margin: auto;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
 
 .active {
   display: inline-block;
+  margin: 0;
+  padding: 0;
 }
 
 .inactive {
   display: none;
+  margin: 0;
 }
 
 .slides {
   max-height: var(--heights);
   width: var(--widths);
   position: relative;
+  margin: 0;
+  padding: 0;
 }
 
 .slide-img{
@@ -41,7 +47,7 @@
   width: 100%;
   height: 5vh;
   color: white;
-  font-size: 45px;
+  font-size: 4vw;
   position: absolute;
   text-align: center;
   top: 25%;
@@ -60,7 +66,7 @@
 }
 .slide-text {
   top: 40%;
-  font-size: 20px;
+  font-size: 2vw;
   animation-name: example2;
   animation-duration: 2s;
   color: rgb(70, 114, 217);
@@ -78,7 +84,7 @@
   position: absolute;
   top: 50%;
   width: auto;
-  padding: 1rem;
+  padding: 2vw;
   margin-top: -3rem;
   font-size: 10px;
   margin: 0 30px;
@@ -113,8 +119,8 @@
 
 .dot {
   cursor: pointer;
-  height: 1rem;
-  width: 1rem;
+  height: 2vw;
+  width: 2vw;
   margin: 0 3px;
   padding: 0;
   background-color: transparent;
@@ -136,58 +142,39 @@
 .play-pause {
   color: black;
 }
-
-/* @media(min-width:875px){
-  .slide-image{
-    padding: 0;
-    max-width: 0;
-  }
  
-} */
-/* @media(max-width:800px)
-{
-  .slider-container{
-    height: 40vh;
-  }
-  .slide-img{
-    height: 40vh;
-  }
-  .slide-title{
-    font-size: 22px;
-  }
-  .slide-text{
-    font-size: 14px;
-  }
-}  */
 @media(max-width:400px)
 {
-  .slider-container{
-    height: 4;
-  }
-  .slide-img{
+ 
+  /* .slide-img{
     height: 30vh;
-  }
-  .slide-title{
+  } */
+  /* .slide-title{
     font-size: 16px;
   }
   .slide-text{
     font-size: 8px;
-  }
-  .slides{
+  } */
+  /* .slides{
     height: 30vh;
     padding: 0;
     margin: 0;
-  }
-  .dot{
+  } */
+  /* .dot{
     margin: 0;
-  }
-  .all-dots{
-    top: 45%;
-    padding-bottom: 0;
+  /* } */
+  /* .all-dots{ */ 
+    /* top: 45%; */
+    /* padding-bottom: 0;
     margin-bottom: 0;
+  } */
+  .all-dots{
+    top: 70%;
+
   }
+  
   .prev,.next{
     top: 25%;
-    font-size: 10px;
+    font-size: 2px;
   }
 } 
