--- a/src/Component/Assets/css/BlockPage.css
+++ b/src/Component/Assets/css/BlockPage.css
@@ -48,6 +48,7 @@
     padding: 4px 8px;
     border-radius: 3px;
     margin-right: 4px;
+    margin-top: 10px;
 
 }
 .BlockpagebodyDiv form button{
@@ -58,6 +59,7 @@
     padding: 4px 8px;
     width: 180px;
     border-radius: 3px;
+    margin-top: 10px;
 
 }
 .BlockpagebodyDiv form button:hover{
