--- a/src/Component/Assets/css/Navbar.css
+++ b/src/Component/Assets/css/Navbar.css
@@ -155,13 +155,15 @@
 .sideRemotebtn{
     position: fixed;
     top: 45%;
-    right: 0;
-    z-index: 10000;
-    transform: rotate(90deg);
+    right: -53px;
+    z-index: 10;
+    transform: rotate(-90deg);
     background-color: #075887;
-    padding: 8px 10px;
+    padding: 4px 14px;
     color: white;
-    border-radius: 20%;
+    /* border-radius: 20%; */
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 .sideRemotebtn a{
     text-decoration: none;
@@ -263,7 +265,7 @@
         padding-top: 100px;
         background-color: #fff;
         position: absolute;
-        z-index: 1;
+        z-index: 10;
         box-shadow: 2px 3px 3px black;
         top: -30px ;
         height: 100vh;
