--- a/src/Component/Assets/css/CompanyLogo.css
+++ b/src/Component/Assets/css/CompanyLogo.css
@@ -5,9 +5,11 @@
     box-shadow: 0 1px 2px black;
     flex-wrap: wrap;
 }
+
 .bodyDiv img{
     width: 150px;
     height: 110px;
+    object-fit: contain;
 }
 
 @media(max-width:475px) {
